--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.22.3",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
